# ducktabe

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/ducky/: core.rs  utils.rs
src/tests/: generate_data.sql
src/tui/: app.rs  events.rs  ui.rs
